api-gateway/openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway
spec:
  to:
    kind: Service
    name: api-gateway
  port:
    targetPort: 8080
